# socialmedia2

./: .content-policy.md  .dockerignore  .env  .env.example  .env.lily-ai-socialmedia.production  .env.production  .env.production.template  .env.updated  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ACCOUNT_SETUP_GUIDE.md  ADMIN_SETUP.md  AGENT_3_COMPLETION_REPORT.md  AGENT_3_FINAL_REPORT.md  AGENT_CONTEXT.md  AGENT_COORDINATION_GUIDE.md  AUTONOMOUS_SCHEDULING.md  BACKEND_VERIFICATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEEP_RESEARCH_INTEGRATION_SUMMARY.md  DEMO_INSTRUCTIONS.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  ENVIRONMENT_VARIABLES.md  FRONTEND_INTEGRATION_GUIDE.md  IMPORTANT_NOTES.md  INTEGRATION_API_DOCUMENTATION.md  INTEGRATION_DEPLOYMENT_GUIDE.md  INTEGRATION_SECURITY_AUDIT.md  LICENSE  MODEL_UPGRADE_SUMMARY.md  Makefile  PLATFORM_VALIDATION_SETUP.md  PRODUCTION_DATABASE_FIXES.md  PRODUCTION_ROADMAP.md  PROJECT_HEALTH_GUIDE.md  (+90 more)
.github/: BRANCH_PROTECTION_SETUP.md  branch-protection-config.json
.github/codeql/: codeql-config.yml
.github/workflows/: backend-tests.yml  code-quality.yml  codeql-analysis.yml  compliance-check.yml  dependency-update.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  frontend-ci.yml  integration-deployment.yml  monitoring.yml  rollback-production.yml  security-audit.yml  security-dashboard.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_auth_fields.py  003_enhanced_content_metadata.py  004_add_notifications_table.py  005_add_milestones_table.py  006_fix_metadata_column_names.py  007_add_external_post_id_to_contentlog.py  008_add_fastapi_users_columns.py  008_add_social_platform_connections.py  009_add_pgvector_tables.py  010_add_autonomous_mode_fields.py  011_add_audit_logs_table.py  012_add_multi_tenant_schema.py  013_add_admin_system.py  014_add_user_credentials.py  015_upgrade_embeddings_to_3072_dimensions.py  016_convert_to_open_saas_auth.py  017_add_missing_user_columns.py  017_ensure_engagement_data_column.py  018_ensure_engagement_data_column.py  019_add_phase3a_social_inbox_models.py  020_add_social_inbox_settings.py  021_fix_foreign_key_relationships.py  022_ensure_user_settings_table.py  023_add_user_id_to_memory_content_tables.py  024_partner_oauth_connections_audit.py  025_add_performance_indexes.py  2025_07_23_1903-373835cefaf9_add_memory_table_and_vector_id_fields.py  2025_08_20_1420-f42f94c7a129_add_two_factor_authentication_fields_to_.py
backend/: app_complete.py  main.py  main_minimal.py  requirements.txt
backend/agents/: crew_config.py  deep_research_agent.py  lightweight_crew.py  tools.py
backend/api/: _registry.py  admin.py  ai_suggestions.py  assistant_chat.py  auth.py  auth_fastapi_users.py  auth_management.py  auth_open.py  autonomous.py  autonomous_stub.py  content.py  content_history.py  content_real.py  content_stub.py  database_health.py  deep_research.py  diagnostics.py  diagnostics_simple.py  feature_flags.py  goals.py  goals_v2.py  image_streaming.py  integration_services.py  memory.py  memory_v2.py  memory_vector.py  metrics_stub.py  monitoring.py  notifications.py  notifications_stub.py  organizations.py  partner_oauth.py  performance_dashboard.py  performance_monitoring.py  similarity.py  simple_workflow.py  social_auth.py  social_inbox.py  social_platforms.py  system_logs.py  (+10 more)
backend/auth/: admin_auth.py  auth0.py  config_validator.py  dependencies.py  fastapi_users_config.py  jwt_handler.py  middleware.py  permissions.py  security.py  social_oauth.py  two_factor.py
backend/config/: production.py
backend/core/: audit_logger.py  config.py  datetime_utils.py  encryption.py  env_validator.py  env_validator_simple.py  error_handler.py  feature_flags.py  goals.py  memory.py  openai_utils.py  production_config.py  security.py  security_middleware.py  simple_goals.py  simple_memory.py  simple_vector_search.py  suppress_warnings.py  tiers.py  timezone_utils.py  token_encryption.py  vector_store.py  vector_store_mock.py  workflow.py
backend/db/: add_image_presets_migration.py  admin_models.py  auto_migrate.py  database.py  database_optimized.py  ensure_columns.py  init_db.py  models.py  multi_tenant_models.py  performance_optimizations.py  query_optimizations.py  user_credentials.py
backend/docs/: openapi_enhanced.py
backend/integrations/: __init__.py  facebook_client.py  instagram_client.py  integration_error_handler.py  linkedin_client.py  meta_client.py  performance_optimizer.py  tiktok_client.py  twitter_client.py
backend/middleware/: error_tracking.py  tenant_isolation.py
backend/monitoring/: logging_config.py
backend/schemas/: two_factor.py
backend/scripts/: create_super_admin.py  create_super_admin_direct.py  simple_integration_test.py  validate_platform_integrations.py
backend/security/: security_config.py
backend/services/: __init__.py  ai_insights_service.py  alt_text_service.py  apm_service.py  autonomous_posting.py  cache_decorators.py  cache_warmup_service.py  connection_pool_manager.py  connection_publisher_service.py  content_automation.py  content_categorization.py  (+49 more)
docs/: API_INTEGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_GUIDE.md  implementation-roadmap.md  project-spec.md
frontend/: .env  .env.example  .env.production  .prettierignore  .prettierrc  ACCESSIBILITY_AUDIT_REPORT.md  DEPLOYMENT_TRIGGER.md  TESTING.md  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  test-api-connection.js  vite.config.js
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
nginx/: lily-ai-socialmedia.conf
ops/: otel-collector-config.yaml
scripts/: cloudflare_config.md  create_registration_keys.py  create_super_admin.py  fix_migrations.py  generate_production_secrets.py  generate_secrets.py  validate_production_security.py
(+273 files in other folders)
